[tool.poetry]
name = "gcov2db-server"
version = "0.1.0"
description = ""
authors = ["stoberblog <stober.blog@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.103.2"
click = "^8.1.7"
sqlalchemy = "^2.0.21"
sqlalchemy-orm = "^1.2.10"
mysqlclient = "^2.2.0"
fastapi-security = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
